--- a/src/pages/services/service.css
+++ b/src/pages/services/service.css
@@ -28,7 +28,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 255, 0.5); /* Semi-transparent blue overlay */
+  background-color: #945EB380; /* Semi-transparent blue overlay */
   z-index: -1; /* Place the overlay behind the content */
   pointer-events: none; /* Prevents interaction interference */
 }
@@ -51,7 +51,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 255, 0.5); /* Semi-transparent blue overlay */
+  background-color: #945EB380; /* Semi-transparent blue overlay */
   z-index: -1; /* Place the overlay behind the content */
   pointer-events: none; /* Prevents interaction interference */
 }
