Assignment Page complete

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -9,7 +9,7 @@
 
 .cta_section2 {
     position: relative;
-    background-image: url("https://cdn.shopify.com/s/files/1/0704/6378/2946/files/Group_72171.png?v=1712918882");
+    background-image: url("https://cdn.shopify.com/s/files/1/0704/6378/2946/files/7d4821ce-eae2-4617-b428-dc7ae8c3878c.jpg?v=1736072869");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -18,7 +18,7 @@
 
 .cta_section {
     position: relative;
-    background-image: url("https://cdn.shopify.com/s/files/1/0704/6378/2946/files/Rectangle_42.png?v=1713360636");
+    background-image: url("https://cdn.shopify.com/s/files/1/0704/6378/2946/files/00feffbd-6526-4784-8684-2518b8c584aa.jpg?v=1736073486");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
