--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ input::-webkit-inner-spin-button {
 
 body {
   --sb-track-color: #ffffff;
-  --sb-thumb-color: #525fd8;
+  --sb-thumb-color: #68217A;
   --sb-size: 7px;
 }
 
@@ -63,7 +63,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .custom_shadow {
-  -webkit-box-shadow: 0px 13px 61px 3px rgba(212, 118, 93, 0.75);
-  -moz-box-shadow: 0px 13px 61px 3px rgba(212, 118, 93, 0.75);
-  box-shadow: 0px 13px 61px 3px rgba(212, 118, 93, 0.75);
+  -webkit-box-shadow: 0px 13px 61px 3px rgba(174, 93, 212, 0.75);
+  -moz-box-shadow: 0px 13px 61px 3px rgba(174, 93, 212, 0.75);
+  box-shadow: 0px 13px 61px 3px rgba(174, 93, 212, 0.75);
 }
