--- a/src/pages/services/service.css
+++ b/src/pages/services/service.css
@@ -10,6 +10,30 @@
   object-fit: fill;
 }
 
+
+.home_backgroundImage {
+  position: relative; /* Enable positioning context for the overlay */
+  background-image: url("https://cdn.shopify.com/s/files/1/0704/6378/2946/files/Banner_1.png?v=1736096854");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: fill;
+  color: white; /* Ensures text color is white to contrast with the blue overlay */
+  z-index: 0;
+}
+
+.home_backgroundImage::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #52356380; 
+  z-index: -1; 
+  pointer-events: none; 
+}
+
 .onlineClass_backgroundImage {
   position: relative; /* Enable positioning context for the overlay */
   background-image: url("https://cdn.shopify.com/s/files/1/0704/6378/2946/files/bgImg.webp?v=1730661923");
